fixed incorrect classname for image overflow hotfix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 @layer utilities {
-  .whaaaat {
+  .overflow-hidden {
     -webkit-mask-image: -webkit-radial-gradient(white, black);
   }
 }
